src/Pages/Login/Login.css
.login-page {
  min-height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.password-reset-card {
  width: 350px;
  height: 300px;
  background-color: #191919 !important;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 25px !important;
}

.login-card {
  width: 350px;
  height: 600px;
  background-color: #191919 !important;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 25px !important;
}

.back-button {
  align-self: left;
  border-radius: 25px !important;
  font-family: "Figtree" !important;

  &.MuiButtonBase-root:hover {
    color: #fff !important;
  }
}

.password-util-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.password-error-text {
  color: #ffffff !important;
  font-family: "Figtree" !important;
  font-size: 12px !important;
  max-width: 75%;
}

.header-back-button-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: 92%;
}

.register-header {
  font-size: 30px !important;
  font-family: "Figtree" !important;
  position: absolute !important;
  left: 50% !important;
  transform: translateX(-50%);
  color: #fff
}

.login-header {
  font-size: 30px !important;
  font-family: "Figtree" !important;
  color: #ffffff !important;
}

.password-strength-text {
  font-family: "Figtree" !important;
  font-size: 14px !important;
}

.password-strength-results {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
}

.toggle-password-visibility-button {
  color: #ffffff !important;
  min-width: 40px !important;
  height: 40px !important;

  &.MuiButtonBase-root:hover {
    background-color: transparent;
  }
}

.toggle-password-visibility-button-login {
  color: #ffffff !important;
  min-width: 40px !important;
  height: 40px !important;

  &.MuiButtonBase-root:hover {
    background-color: transparent;
  }
}

.result-group {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  font-family: "Figtree" !important;
  font-size: 14px !important;
}

.results-icon {
  width: 20px !important;
  height: 20px !important;
}

.login-input-fields,
.register-input-fields {
  width: 95%;
  border-radius: 25px !important;
  height: 20px;
  padding: 5px;
  background-color: #333333;
  font-family: "Figtree" !important;
}

input.login-input-fields:focus {
  outline: 2px solid #ffffff;
}

input.register-input-fields:focus {
  outline: 2px solid #ffffff;
}

.login-text-field-headers,
.register-text-field-headers {
  padding-bottom: 10px;
  font-family: "Figtree" !important;
}

.login-field-icons,
.register-field-icons {
  width: 40px !important;
  height: 32px !important;
  color: #ffffff !important;
}

.login-icon-field-container,
.register-icon-field-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  max-height: 32px;
}

.incorrect-login-message {
  color: #ffffff !important;
  font-family: "Figtree" !important;
  font-size: 12px !important;
  width: 50%;
  float: left;
  padding-top: 8px;
}

.forgot-password-button {
  position: relative !important;
  float: right !important;
  font-family: "Figtree" !important;

  &.MuiButtonBase-root:hover {
    background-color: transparent;
  }
}

.login-button,
.register-button {
  width: 80%;
  border-radius: 25px !important;
  font-family: "Figtree" !important;

  &.MuiButtonBase-root:hover {
    background-color: transparent;
  }
}

.login-section-container {
  width: 80%;
}

.register-section {
  width: 100%;
}

.register-section-container {
  width: 80%;
  height: 80%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.register-message {
  color: #fff !important;
  font-family: "Figtree" !important;
  margin-top: -20px !important;
  margin-bottom: 10px !important;
}

.register-button-and-message-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}  margin-bottom: 10px !important;
}

.register-button-and-message-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

